--- a/my-app/src/routes/styles.css
+++ b/my-app/src/routes/styles.css
@@ -8,6 +8,8 @@
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
+	--color-theme-hb: #eb8900;
+
 	--color-theme-2: #4075a6;
 	--color-text: rgba(0, 0, 0, 0.7);
 	--column-width: 42rem;
@@ -61,7 +63,20 @@ h2 {
 
 .introduction{
 	font-size: 1.5rem;
-
+}
+.paragraph {
+	font-size: 1.2rem;
+	padding: 5%;
+}
+.highlight {
+	color: var(--color-theme-hb);
+}
+picture {
+	display: flex;
+	justify-content: center;
+}
+#profileHaluka{
+	width: 50%;
 }
 
 pre {
